initial test updated app version

--- a/helm-chart/nginx/values-v1.yaml
+++ b/helm-chart/nginx/values-v1.yaml
@@ -5,11 +5,11 @@ image:
   pullPolicy: IfNotPresent
   tag: "stable-alpine"
 
-serviceAccount:
-  create: true
-  automount: true
-  annotations: {}
-  name: ""
+# serviceAccount:
+#   create: true
+#   automount: true
+#   annotations: {}
+#   name: ""
 
 podAnnotations: {}
 podLabels: {}
